🔧 config and install stuff

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
             "preset-react": {
               "runtime": "automatic",
               "importSource": "@emotion/react"
+            },
+            "styled-jsx": {
+              "plugins": ["@styled-jsx/plugin-sass"]
             }
           }],
     ],
