--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.22",
+    "@emotion/babel-plugin": "^11.7.2",
+    "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/classnames": "^2.3.1",
     "@types/next-seo": "^2.1.2",
-    "@types/nookies": "^2.0.3",
-    "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "^17.0.18",
+    "@types/nookies": "^2.0.3",
+    "@types/styled-components": "^5.1.22",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.9.0",
     "eslint-config-next": "^12.0.10"
