--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^5.4.1",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "firebase": "^9.6.6",
     "next": "12.0.10",
     "next-seo": "^5.1.0",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-notion": "^0.10.0",
     "react-responsive-modal": "^6.2.0",
