--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-toastify": "^8.1.1",
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
