--- a/.babelrc
+++ b/.babelrc
@@ -6,12 +6,13 @@
               "importSource": "@emotion/react"
             },
             "styled-jsx": {
-              "plugins": ["@styled-jsx/plugin-sass"]
+              "plugins": ["@styled-jsx/plugin-sass"],
+              "optimizeForSpeed": true,
             }
           }],
     ],
     "plugins": [
         [ "styled-components", { "ssr": true } ],
-        "@emotion/babel-plugin"
+        "@emotion/babel-plugin",
     ]
 }
