--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-notion": "^0.10.0",
     "react-responsive-modal": "^6.2.0",
     "react-toastify": "^8.1.1",
+    "sanitize-html": "^2.7.0",
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
