--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-notion": "^0.10.0",
     "react-responsive-modal": "^6.2.0",
     "react-toastify": "^8.1.1",
+    "sanitize-html": "^2.7.0",
     "sass": "^1.49.7",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
@@ -37,6 +38,7 @@
     "@types/next-seo": "^2.1.2",
     "@types/node": "^17.0.18",
     "@types/nookies": "^2.0.3",
+    "@types/sanitize-html": "^2.6.2",
     "@types/styled-components": "^5.1.22",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.9.0",
